# doi-check-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
src/doi_check/: __init__.py  __main__.py  bib_updater.py  bib_utils.py  crossref_api.py
src/doi_check/templates/: AGENTS.md  SKILL.md
