[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doi-check"
version = "1.0.0"
description = "Verify BibTeX references against the Crossref API — catch DOI errors, year/author/title mismatches"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["bibtex", "doi", "crossref", "latex", "references", "citation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.scripts]
doi-check = "doi_check.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doi_check"]
